<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>artgmap_vcs</name>
  <version>0.0.0</version>
  <description>Artg mapping, path planning and visualization system</description>

  <maintainer email="brtdevkit@gmail.com">brtdev</maintainer>
  <license>TODO</license>

  <!-- ========================= -->
  <!-- Build system -->
  <!-- ========================= -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ========================= -->
  <!-- Core ROS2 -->
  <!-- ========================= -->
  <depend>rclcpp</depend>

  <!-- ========================= -->
  <!-- Messages -->
  <!-- ========================= -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- ========================= -->
  <!-- TF2 -->
  <!-- ========================= -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>

  <!-- ========================= -->
  <!-- Testing -->
  <!-- ========================= -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
